// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`MainScreenTemplate renders correctly in mobile mode 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Home",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Profiles",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Sessions",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Settings",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#bcfeff",
                    "name": "alarm-check",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "format-list-checkbox",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "blur",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "cog",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
              ],
              "props": {
                "style": {
                  "backgroundColor": "#070724",
                  "borderTopColor": "#ffffff",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-evenly",
                },
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Aurora disconnected.",
                              ],
                              "props": {
                                "maxFontSizeMultiplier": undefined,
                                "numberOfLines": 1,
                                "ref": {
                                  "current": null,
                                },
                                "selectable": false,
                                "style": [
                                  {
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "rgba(28, 27, 31, 1)",
                                    "writingDirection": "ltr",
                                  },
                                  [
                                    {
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0.1,
                                      "lineHeight": 20,
                                    },
                                    [
                                      {
                                        "marginHorizontal": 16,
                                        "marginVertical": 9,
                                        "textAlign": "center",
                                      },
                                      false,
                                      {
                                        "marginHorizontal": 12,
                                      },
                                      undefined,
                                      false,
                                      {
                                        "color": "#00ffe6",
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "fontWeight": "500",
                                        "letterSpacing": 0.1,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "fontFamily": "calibre_app_semibold",
                                          "fontSize": 14,
                                        },
                                        {
                                          "color": "rgba(28, 27, 31, 1)",
                                        },
                                        {
                                          "color": "#ffffff",
                                        },
                                      ],
                                    ],
                                  ],
                                ],
                                "testID": "button-text",
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              },
                              [
                                {
                                  "height": 28,
                                  "marginBottom": 12,
                                  "marginTop": 16,
                                },
                                {
                                  "backgroundColor": "#4a2fba",
                                  "marginBottom": 0,
                                },
                              ],
                            ],
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": undefined,
                        "accessibilityLabel": undefined,
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": undefined,
                        },
                        "accessible": undefined,
                        "delayLongPress": undefined,
                        "disabled": false,
                        "hitSlop": undefined,
                        "onLongPress": undefined,
                        "onPress": [class Function],
                        "onPressIn": [Function],
                        "onPressOut": [Function],
                        "ref": null,
                        "style": [Function],
                        "testID": "button",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 10,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "ref": null,
                "style": {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": AnimatedValue {
                      "_v": 0,
                    },
                    "width": 0,
                  },
                  "shadowOpacity": AnimatedValue {
                    "_v": 0,
                  },
                  "shadowRadius": AnimatedValue {
                    "_v": 0,
                  },
                },
                "testID": "button-container-outer-layer",
              },
              "type": "Animated.View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`MainScreenTemplate renders correctly in desktop mode 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Home",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Profiles",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Sessions",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Settings",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`MainScreenTemplate renders correctly when connected 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Home",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Profiles",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Sessions",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Settings",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#bcfeff",
                    "name": "alarm-check",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "format-list-checkbox",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "blur",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "cog",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
              ],
              "props": {
                "style": {
                  "backgroundColor": "#070724",
                  "borderTopColor": "#ffffff",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-evenly",
                },
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "AuroraStatus:Connected Version:2.1.0 Battery:85%",
                              ],
                              "props": {
                                "maxFontSizeMultiplier": undefined,
                                "numberOfLines": 1,
                                "ref": {
                                  "current": null,
                                },
                                "selectable": false,
                                "style": [
                                  {
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "rgba(28, 27, 31, 1)",
                                    "writingDirection": "ltr",
                                  },
                                  [
                                    {
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0.1,
                                      "lineHeight": 20,
                                    },
                                    [
                                      {
                                        "marginHorizontal": 16,
                                        "marginVertical": 9,
                                        "textAlign": "center",
                                      },
                                      false,
                                      {
                                        "marginHorizontal": 12,
                                      },
                                      undefined,
                                      false,
                                      {
                                        "color": "#00ffe6",
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "fontWeight": "500",
                                        "letterSpacing": 0.1,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "fontFamily": "calibre_app_semibold",
                                          "fontSize": 14,
                                        },
                                        {
                                          "color": "rgba(28, 27, 31, 1)",
                                        },
                                        {
                                          "color": "#4a2fba",
                                        },
                                      ],
                                    ],
                                  ],
                                ],
                                "testID": "button-text",
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              },
                              [
                                {
                                  "height": 28,
                                  "marginBottom": 12,
                                  "marginTop": 16,
                                },
                                {
                                  "backgroundColor": "#00ffe6",
                                  "marginBottom": 0,
                                },
                              ],
                            ],
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": undefined,
                        "accessibilityLabel": undefined,
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": undefined,
                        },
                        "accessible": undefined,
                        "delayLongPress": undefined,
                        "disabled": false,
                        "hitSlop": undefined,
                        "onLongPress": undefined,
                        "onPress": [class Function],
                        "onPressIn": [Function],
                        "onPressOut": [Function],
                        "ref": null,
                        "style": [Function],
                        "testID": "button",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 10,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "ref": null,
                "style": {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": AnimatedValue {
                      "_v": 0,
                    },
                    "width": 0,
                  },
                  "shadowOpacity": AnimatedValue {
                    "_v": 0,
                  },
                  "shadowRadius": AnimatedValue {
                    "_v": 0,
                  },
                },
                "testID": "button-container-outer-layer",
              },
              "type": "Animated.View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`MainScreenTemplate renders error message when error is provided 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Home",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Profiles",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Sessions",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "component": [Function],
                "name": "Settings",
                "options": {
                  "drawerIcon": [Function],
                  "drawerLabel": "",
                },
              },
              "type": "DrawerScreen",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#bcfeff",
                    "name": "alarm-check",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "format-list-checkbox",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "blur",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "cog",
                    "onPress": [Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
              ],
              "props": {
                "style": {
                  "backgroundColor": "#070724",
                  "borderTopColor": "#ffffff",
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-evenly",
                },
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                "Connection failed",
                              ],
                              "props": {
                                "maxFontSizeMultiplier": undefined,
                                "numberOfLines": 1,
                                "ref": {
                                  "current": null,
                                },
                                "selectable": false,
                                "style": [
                                  {
                                    "textAlign": "left",
                                  },
                                  {
                                    "color": "rgba(28, 27, 31, 1)",
                                    "writingDirection": "ltr",
                                  },
                                  [
                                    {
                                      "fontFamily": "System",
                                      "fontSize": 14,
                                      "fontWeight": "500",
                                      "letterSpacing": 0.1,
                                      "lineHeight": 20,
                                    },
                                    [
                                      {
                                        "marginHorizontal": 16,
                                        "marginVertical": 9,
                                        "textAlign": "center",
                                      },
                                      false,
                                      {
                                        "marginHorizontal": 12,
                                      },
                                      undefined,
                                      false,
                                      {
                                        "color": "#00ffe6",
                                        "fontFamily": "System",
                                        "fontSize": 14,
                                        "fontWeight": "500",
                                        "letterSpacing": 0.1,
                                        "lineHeight": 20,
                                      },
                                      [
                                        {
                                          "fontFamily": "calibre_app_semibold",
                                          "fontSize": 14,
                                        },
                                        {
                                          "color": "rgba(28, 27, 31, 1)",
                                        },
                                        {
                                          "color": "#ffffff",
                                        },
                                      ],
                                    ],
                                  ],
                                ],
                                "testID": "button-text",
                              },
                              "type": "Text",
                            },
                          ],
                          "props": {
                            "style": [
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "center",
                              },
                              [
                                {
                                  "height": 28,
                                  "marginBottom": 12,
                                  "marginTop": 16,
                                },
                                {
                                  "backgroundColor": "#4a2fba",
                                  "marginBottom": 0,
                                },
                              ],
                            ],
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": undefined,
                        "accessibilityLabel": undefined,
                        "accessibilityRole": "button",
                        "accessibilityState": {
                          "disabled": undefined,
                        },
                        "accessible": undefined,
                        "delayLongPress": undefined,
                        "disabled": false,
                        "hitSlop": undefined,
                        "onLongPress": undefined,
                        "onPress": [class Function],
                        "onPressIn": [Function],
                        "onPressOut": [Function],
                        "ref": null,
                        "style": [Function],
                        "testID": "button",
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "style": {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 10,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "flex": undefined,
                      "minWidth": 64,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": AnimatedValue {
                          "_v": 0,
                        },
                        "width": 0,
                      },
                      "shadowOpacity": AnimatedValue {
                        "_v": 0,
                      },
                      "shadowRadius": AnimatedValue {
                        "_v": 0,
                      },
                    },
                    "testID": "button-container",
                  },
                  "type": "Animated.View",
                },
              ],
              "props": {
                "ref": null,
                "style": {
                  "backgroundColor": "transparent",
                  "borderRadius": 10,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": AnimatedValue {
                      "_v": 0,
                    },
                    "width": 0,
                  },
                  "shadowOpacity": AnimatedValue {
                    "_v": 0,
                  },
                  "shadowRadius": AnimatedValue {
                    "_v": 0,
                  },
                },
                "testID": "button-container-outer-layer",
              },
              "type": "Animated.View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;
